# infer-cls-ascend310-mslite

./: .gitignore  CMakeLists.txt  README.md
inc/: flag_parser.h  infer.h  utils.h
scripts/: export.py  postprocess.py  run.sh
src/: main.cc
