cmake_minimum_required(VERSION 3.17)
project(infer-cls-ascend310-mslite)
message(STATUS "InferClsAscend310 Project Source Directory: ${PROJECT_SOURCE_DIR}")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -std=c++17 -Werror -Wall -fPIE -Wl,--allow-shlib-undefined")
add_compile_definitions(_GLIBCXX_USE_CXX11_ABI=0)

message(STATUS "")
option(MINDSPORE_PATH "mindspore install path" "")
message(STATUS "MindSpore Path: ${MINDSPORE_PATH}")
include_directories(${MINDSPORE_PATH})
include_directories(${MINDSPORE_PATH}/include)
if(EXISTS ${MINDSPORE_PATH}/lib/libmindspore-lite.so)
    message(STATUS "    Compile with MindSpore-Lite")
    set(MS_LIB ${MINDSPORE_PATH}/lib/libmindspore-lite.so)
    set(MD_LIB ${MINDSPORE_PATH}/lib/libminddata-lite.so)
    add_compile_definitions(ENABLE_LITE)
else()
    message(STATUS "    Compile with MindSpore")
    set(MS_LIB ${MINDSPORE_PATH}/lib/libmindspore.so)
    file(GLOB_RECURSE MD_LIB ${MINDSPORE_PATH}/_c_dataengine*)
endif()
message(STATUS "    MS_LIB: ${MS_LIB}")
message(STATUS "    MD_LIB: ${MD_LIB}")

add_executable(main src/main.cc)
target_include_directories(main PRIVATE ${PROJECT_SOURCE_DIR}/inc)
target_link_libraries(main ${MS_LIB} ${MD_LIB})
